src/objects/HTBSettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Contains settings for HTB process, such as URN prefixes and length.</description>
    <fields>
        <fullName>BrandCode__c</fullName>
        <description>The three character Brand code supplied by UKARcs.</description>
        <inlineHelpText>The three character Brand code supplied by UKARcs.</inlineHelpText>
        <label>Brand Code</label>
        <length>3</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Environment__c</fullName>
        <defaultValue>&quot;dv&quot;</defaultValue>
        <description>To indicate which environment the data is destined for:
pd      Production
pp      pre-prod
dv      Dev 
UAT(n)  UAT 1-99 (proposed)</description>
        <inlineHelpText>To indicate which environment the data is destined for:
pd      Production
pp      pre-prod
dv      Dev 
UAT(n)  UAT 1-99 (proposed)</inlineHelpText>
        <label>Environment</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FilenameFormat__c</fullName>
        <defaultValue>&quot;MGS_[LENDERCODE]_[BRANDCODE]_MORTGAGES_[MONTH]&quot;</defaultValue>
        <description>The format of the filenames which are produced by the system.</description>
        <inlineHelpText>The format of the filenames which are produced by the system.</inlineHelpText>
        <label>Filename Format</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LenderCode__c</fullName>
        <description>The three character Lender code supplied by UKARcs.</description>
        <inlineHelpText>The three character Lender code supplied by UKARcs.</inlineHelpText>
        <label>Lender Code</label>
        <length>3</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mode__c</fullName>
        <defaultValue>&quot;VERIFY&quot;</defaultValue>
        <description>To indicate which mode the data is intended to represent:
VERIFY  Lender onboarding / XSD change
LIVE	Lender data treated as LIVE</description>
        <inlineHelpText>To indicate which mode the data is intended to represent:
VERIFY  Lender onboarding / XSD change
LIVE	Lender data treated as LIVE</inlineHelpText>
        <label>Mode</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Receiver__c</fullName>
        <defaultValue>&quot;UKARCS&quot;</defaultValue>
        <description>ID/Code/Name of the Receiver organisation.</description>
        <inlineHelpText>ID/Code/Name of the Receiver organisation.</inlineHelpText>
        <label>Receiver</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sender__c</fullName>
        <defaultValue>&quot;ARB&quot;</defaultValue>
        <description>ID/Code/Name of the sender organisation.</description>
        <inlineHelpText>ID/Code/Name of the sender organisation.</inlineHelpText>
        <label>Sender</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URNLength__c</fullName>
        <defaultValue>6</defaultValue>
        <description>The length of the number section of the generated URNs. e.g. 3 = 001, 4 = 0001, 5 = 00001, etc.</description>
        <inlineHelpText>The length of the number section of the generated URNs. e.g. 3 = 001, 4 = 0001, 5 = 00001, etc.</inlineHelpText>
        <label>URN Length</label>
        <precision>1</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>URNPrefix__c</fullName>
        <defaultValue>&quot;&quot;</defaultValue>
        <description>Text which will be prefixed to the beginning of generated URNS.</description>
        <inlineHelpText>Text which will be prefixed to the beginning of generated URNS.</inlineHelpText>
        <label>URN Prefix</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>HTB Settings</label>
</CustomObject>